syntax = "proto3";

package logcache.v1;

import "google/api/annotations.proto";
import "v2/envelope.proto";
import "egress.proto";

// The ShardGroupReader service is used to read data from the LogCache system
// via groups of source IDs.
service ShardGroupReader {
    rpc SetShardGroup(SetShardGroupRequest) returns (SetShardGroupResponse) {
        option (google.api.http) = {
            put: "/v1/shard_group/{name}/{source_id=**}"
        };
    }

    rpc Read(ShardGroupReadRequest) returns (ShardGroupReadResponse) {
        option (google.api.http) = {
            get: "/v1/shard_group/{name}"
        };
    }

    rpc ShardGroup(ShardGroupRequest) returns (ShardGroupResponse) {
        option (google.api.http) = {
            get: "/v1/shard_group/{name}/meta"
        };
    }
}

message SetShardGroupRequest {
    string name = 1;
    string source_id = 2;
    bool local_only = 3;
}

message SetShardGroupResponse {
}

message ShardGroupReadRequest {
    string name = 1;
    uint64 requester_id = 2;

    int64 start_time = 3;
    int64 end_time = 4;
    int64 limit = 5;
    repeated EnvelopeType envelope_types = 6;
    bool local_only = 7;
}

message ShardGroupReadResponse {
    loggregator.v2.EnvelopeBatch envelopes = 1;
}

message ShardGroupRequest {
    string name = 1;
    bool local_only = 2;
}

message ShardGroupResponse {
    repeated string source_ids = 1;
    repeated uint64 requester_ids = 2;
}

